change to task instructions

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<h2 style="text-align: center;">Local News!</h2>
 		<p style="font-size:125%; text-align: center;">
 		<img src="figs/MAB.png" width="300"><br>
-		To promote local businesses, casinos in Bandit City recently decided to buy new slot machines from their local manufactures.<br>
-		So all casinos now have two new slot machines, one each from <i> Green Geeks </i> and <i> Blue Lagoons</i>.<br>
-		Let us take a look at these new machines.<br>
+		To promote local businesses, casinos in Bandit City only buy slot machines from their local manufactures.<br>
+		So all casinos now have two slot machines, one each from <i> Green Geeks </i> and <i> Blue Lagoons</i>.<br>
+		Let us take a look at these machines.<br>
 		<br>
 		<button type="button" name="button"; onclick="clickStart('page3','page2')"; > Back </button>			   
 		<button type="button" name="button"; onclick="clickStart('page3','page4a')"; >Next</button>
@@ -191,9 +191,11 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<h2 style="text-align: center;">Slot Machines 2.0</h2>
 		<p style="font-size:125%; text-align: center;">
 		The number of BC coins you can get is different for the different keys of the slot machine. <br>
-		You have <strong> 5 chances </strong>  to try and find the most rewarding option for each slot machine. <br>
-		The earlier you find the most rewarding option, the more BC coins you can earn by <b>repeatedly pressing </b> it. <br>
-		As you feel motivated, you will play all the available slot machines in a casino before moving to the next casino. <br>
+		You have <b> 5 chances </b> for each slot machine and your goal is to win as many BC coins as possible. <br>
+		The earlier you find the most lucrative option, the more BC coins you can earn by <b> repeatedly pressing </b> it. <br>
+		Given your enthusiasm, you tend to play all available slot machines in a casino before moving to the next casino. <br>
+		You will be told what percent of the maximum possible coins you earned after every casino so that you know how well you are doing. <br>
+		<!-- You can use it to evalute your current strategy. <br> -->
 		<!-- You will exchange the BC coins you earn for real money at the end of you stay in each casino. -->
 		You will exchange all the BC coins you earned across casinos for real money at the end of your adventure. <br>
 		<br>
@@ -289,8 +291,8 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			The casino owners recently noticed that a lot of people were doing well on the new slot machines. <br>
 			They now want to challenge their visitors. <br>
 			 <!-- as a test to see if people actually are exploiting the pattern individually -->
-			 So, once you finish playing against the two slot machines, they would connect the machines together and ask you to play against the connected slot machine. <br>
-			 The machines are connected such that pressing a button on one would result in pressing the <b>same button</b> on the other. <br>
+			 So, once you finish playing against the two slot machines, they will connect the machines together and ask you to play against the connected slot machine. <br>
+			 The machines are connected such that pressing a button on one will result in pressing the <b>same button</b> on the other. <br>
 			 The options for such a connected machine will be <strong style="color: #50BF00;"> half-green </strong> and <strong style="color: #0090DF;"> half-blue </strong> as shown below. <br>
 			 <img src="figs/GW_buttons.png" width="600" ><br>
 			 The total coins you earn by choosing an option on the connected machine is the <b>sum</b> of the coins from the two slot machines. <br><br>
@@ -429,7 +431,6 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			<h3><div id="numtasks"> Casino 0 out of 20 now visited! </div></h4>
 			<div id="percentreward" style="font-size:125%; text-align: center;"> You earned 0% of maximum possible BC coins in the last casino.</div><br>
 			<div id="realmoney"style="font-size:125%; text-align: center;"> Total money earned so far $ 0 </div>
-			<!-- <h5>Please click on "Next Casino" to continue.</h5> -->
 			<button type="button" name="button"; onclick="clickStart('showperformance','page10')"; >Next Casino</button>
 		</center>
 	</div>
