--- a/index.html
+++ b/index.html
@@ -333,47 +333,51 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			<fieldset> 
 				 <!-- </fieldset> style="float:left;width:400px;margin:5px"> -->
 				<b>What is your goal when you visit a casino? </b><br>
-				<label for="q1l1" style="font-weight: normal;"><input type="radio" name="q1" id="l1"> Try out all options on every slot machine in the casino. </label><br>
-				<label for="q1l2" style="font-weight: normal;"><input type="radio" name="q1" id="icheck1"> Gain as many BC coins as possible from each slot machine.</label> <br>
-				<label for="q1l3" style="font-weight: normal;"><input type="radio" name="q1" > Pick an arbitary option in every try. </label><br>
-				<label for="q1l4" style="font-weight: normal;"><input type="radio" name="q1" > I do not know. </label> <br><br>
+				<label for="q1l1" style="font-weight: normal;"><input type="radio" name="q1" id="l1"><span id="q1l1"> Try out all options on every slot machine in the casino. </span></label><br>
+				<label for="q1l2" style="font-weight: normal;"><input type="radio" name="q1" id="icheck1"><span id="q1icheck1"> Gain as many BC coins as possible from each slot machine. </span></label><br>
+				<label for="q1l3" style="font-weight: normal;"><input type="radio" name="q1" id="l2"><span id="q1l2"> Pick an arbitary option in every try. </span></label><br>
+				<!-- <label for="q1l4" style="font-weight: normal;"><input type="radio" name="q1" > I do not know. </label> -->
+				<br>
 			</fieldset>
 			<fieldset> 
 				 <!-- style="float:left;width:400px;margin:5px"> -->
 				<b>How many slot machines will you play against in each casino? </b><br>
-				<label for="q2l1" style="font-weight: normal;"><input type="radio" name="q2"> May change from casino to casino. </label><br>
-				<label for="q2l2" style="font-weight: normal;"><input type="radio" name="q2"> 2 </label><br>
-				<label for="q2l3" style="font-weight: normal;"><input type="radio" name="q2" id="icheck2"> <span id="casino_id"> 1 </span></label><br>
-				<label for="q2l4" style="font-weight: normal;"><input type="radio" name="q2"> I do not know. </label><br><br>
+				<label for="q2l1" style="font-weight: normal;"><input type="radio" name="q2" id="l1"/><span id="q2l1"> May change from casino to casino. </span></label><br>
+				<label for="q2l2" style="font-weight: normal;"><input type="radio" name="q2" id="l2"/><span id="q2l2"> 2 </span></label><br>
+				<label for="q2l3" style="font-weight: normal;"><input type="radio" name="q2" id="icheck2"> <span id="q2icheck2"> 1 </span></label><br>
+				<!-- <label for="q2l4" style="font-weight: normal;"><input type="radio" name="q2"> I do not know. </label>-->
+				<br>
 			</fieldset>
 			<fieldset>
 			<!-- style="float:left;width:400px;margin:5px"> -->
 				<b>Let us say a machine from GreenGeeks followed a rising pattern in a casino, <br>
 				what pattern will another machine from them follow in the next casino?</b> <br>
-				<label for="q3l1" style="font-weight: normal;"><input type="radio" name="q3">  
-					Rising pattern again. </label><br>
-				<label for="q3l2" style="font-weight: normal;"><input type="radio" name="q3" id="icheck3"> 
-					Either rising or falling, one needs to figure out which. </label><br>
-				<label for="q3l3" style="font-weight: normal;"><input type="radio" name="q3"> 
-					Falling pattern for sure. </label><br>
-				<label for="q3l4" style="font-weight: normal;"><input type="radio" name="q3"> 
-					Either rising, falling or alternating, one needs to figure out which. </label> <br><br>
+				<label for="q3l1" style="font-weight: normal;"><input type="radio" name="q3" id="l1"><span id="q3l1"> 
+					Rising pattern again. </span></label><br>
+				<label for="q3l2" style="font-weight: normal;"><input type="radio" name="q3" id="icheck3"><span id="q3icheck3"> 
+					Either rising or falling, one needs to figure out which. </span></label><br>
+				<label for="q3l3" style="font-weight: normal;"><input type="radio" name="q3" id="l3"><span id="q3l3"> 
+					Falling pattern for sure. </span></label><br>
+				<label for="q3l4" style="font-weight: normal;"><input type="radio" name="q3" id="l4"><span id="q3l4"> 
+					Either rising, falling or alternating, one needs to figure out which. </span></label><br>
+				<br>
 			</fieldset>
 			<fieldset>
 			<!-- style="float:left;width:400px;margin:5px" -->
-				<b>What does pressing an option that is half-green and half-blue mean?</b><br>
-				<label for="q4l1" style="font-weight: normal;"><input type="radio" name="q4">  
-					Choosing the option on either green or blue machine in the casino, you do not know which.</label> <br>
-				<label for="q4l2" style="font-weight: normal;"><input type="radio" name="q4" id="icheck4"> 
-					Choosing the same option on both the machines in the casino simultaneously. </label><br>
-				<label for="q4l3" style="font-weight: normal;"><input type="radio" name="q4"> 
-					Choosing the option on a new slot machine unrelated to other slot machines in the casino.</label> <br>
-				<label for="q4l4" style="font-weight: normal;"><input type="radio" name="q4"> 
-					I do not know. </label><br>
+				<b> What does pressing an option that is half-green and half-blue mean? </b><br>
+				<label for="q4l2" style="font-weight: normal;"><input type="radio" name="q4" id="icheck4"><span id="q4icheck4"> 
+					Choosing the same option on both the machines in the casino simultaneously. </span></label><br>
+				<label for="q4l1" style="font-weight: normal;"><input type="radio" name="q4" id='l2'><span id="q4l2"> 
+					Choosing the option on either green or blue machine in the casino, you do not know which. </span></label><br>
+				<label for="q4l3" style="font-weight: normal;"><input type="radio" name="q4" id='l3'><span id="q4l3"> 
+					Choosing the option on a new slot machine unrelated to other slot machines in the casino. </span></label><br>
+				<!-- <label for="q4l4" style="font-weight: normal;"><input type="radio" name="q4"> I do not know. </label><br> -->
+			<br>
 			</fieldset>
 		</fieldset>
 		<br>
-		<button type="button" name="button"; onclick="instructioncheck()"; >Check answers</button>  
+		<button type="button" name="button"; onclick="clickStart('page8','page6')"; > Back </button>
+		<button type="button" name="button"; onclick="instructioncheck()";> <span id="check"> Check Answers </span> </button>  
 	</div>
 
 	<!--Keyboard layout-->
