remove expected payment line

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			
 			<h4>How much time will it take and how much can you earn?</h4>
 			The study will take <b>20-30 minutes</b>.<br>
-			You will be paid $2.00 USD for participation plus a bonus of up to $6.00 USD depending on your performance.<br>
-			Hence, the <b>expected payment is something around $6.00 to $7.00</b>.
+			You will be paid <b>$2.00</b> USD for participation plus a bonus of up to <b>$6.00</b> USD depending on your performance.<br>
+			<!-- Hence, the <b>expected payment is something around $6.00 to $7.00</b>. -->
 	  
 			<h4>Confidentiality</h4>
 			Your participation in this study will remain confidential.
@@ -123,7 +123,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 			<br>
 			<br>
 	
-			<button type="button" name="button" id="buttonConsentForm" onclick="clickStart('page1','page12');">I consent to participate</button><br><br>
+			<button type="button" name="button" id="buttonConsentForm" onclick="clickStart('page1','page2');">I consent to participate</button><br><br>
 
     </div>  
 
