change currency to pounds

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
 			<h4>How much time will it take and how much can you earn?</h4>
 			The study will take <b>20-30 minutes</b>.<br>
-			You will be paid <b>$2.00</b> USD for participation plus a bonus of up to <b>$6.00</b> USD depending on your performance.<br>
+			You will be paid <b>£2.5</b> pounds for participation plus a bonus of up to <b>£3.5</b> pounds depending on your performance.<br>
 			<!-- Hence, the <b>expected payment is something around $6.00 to $7.00</b>. -->
 	  
 			<h4>Confidentiality</h4>
@@ -69,7 +69,7 @@
 			
 			<h4>Data protection</h4>
 			Your data will be anonymized and only used in the manner described in our data protection sheet,
-			available <a href="https://kyblab.tuebingen.mpg.de/roulecity/data_protection.pdf" target="_blank">here</a> 
+			available <a href="https://kyblab.tuebingen.mpg.de/compositionalbandits/data_protection.pdf" target="_blank">here</a> 
 			(please do not fill out this sheet!).
 			The following text box summarizes the main points. Please read it carefully and provide consent below:<br>
 			<br>
@@ -479,7 +479,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 	<div id="page12" style="display:none">
 		<h2 style="text-align: center;">Your performance and reward</h2>
 		<div id="result" style="text-align: center; font-size: 125%"> </div><br>
-		<div id="money" style="text-align: center; font-size: 125%"> </div><br>
+		<div id="money" style="text-align: center; font-size: 125%">  </div><br>
 		<p style="font-size:125%; text-align: center;">
 		Thank you very much for participating in our study.<br>
 		Your Completion Code is:<br> <span id="completioncode" style="font-weight: bold;">compbandits</span><br>
