change to pound symbol

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ inside of the Max Planck Society and affiliated research institutes, or at partn
 		<center>
 			<h3><div id="numtasks"> Casino 0 out of 20 now visited! </div></h4>
 			<div style="font-size:125%; text-align: center;"> You earned <span id="percentreward" style="font-weight: bold;"> 0 </span><b>%</b> of maximum possible BC coins in the last casino.</div><br>
-			<div style="font-size:125%; text-align: center;"> Total money earned so far <b>$</b><span id="realmoney" style="font-weight: bold;"> 0 </span>.</div> <br>
+			<div style="font-size:125%; text-align: center;"> Total money earned so far <b>£</b><span id="realmoney" style="font-weight: bold;"> 0 </span>.</div> <br>
 			<button type="button" name="button"; onclick="clickStart('showperformance','page10')"; >Next Casino</button>
 		</center>
 	</div>
